# ffmpegpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build_example_command.bat  build_example_command.sh  debug_build.bat  debug_build.sh  init_project.bat  init_project.sh  log  release_build.bat  release_build.sh  test.pgm  vcpkg.json  vcpkg_install.sh
cmake/: FindFFMPEG.cmake  FindGTEST.cmake
include/: AVResult.hpp  AVType.hpp  AudioEncodeParameters.hpp  CodecContext.hpp  Decoder.hpp  Demuxer.hpp  EncodeParameter.hpp  Encoder.hpp  FFMPEG.hpp  Frame.hpp  InputFormat.hpp  Muxer.hpp  Packet.hpp  Rational.hpp  Stream.hpp  VideoEncodeParameter.hpp  VideoEncodeParameters.hpp  ffmpegpp.hpp  ffmpegpp_dnn.hpp  test.hpp
include/codecs/: FFAVAudioEncodeParameters.hpp  FFAVDecoder.hpp  FFAVEncoder.hpp  FFAVVideoEncodeParameters.hpp  createDecodeContext.hpp  createEncodeContext.hpp  ffav.hpp  func.hpp
include/common/: FFAVType.hpp  ffav.hpp
include/error/: AVDemuxException.hpp  AVError.hpp  AVErrorTypes.hpp  ffav.hpp
include/ffmpeg/: AVType.hpp  AVUtils.hpp  AudioEncodeParameters.hpp  AudioStreamInfo.hpp  ChannelLayout.hpp  CodecContext.hpp  CodecParameters.hpp  Decoder.hpp  Demuxer.hpp  Encoder.hpp  Frame.hpp  HWDecoderList.hpp  HWEncoderList.hpp  Muxer.hpp  Packet.hpp  Rational.hpp  Stream.hpp  VideoEncodeParameters.hpp  VideoStreamInfo.hpp
include/high_transcode/: FFAVThreadPool.hpp  FFAVThreadSafeQueue.hpp  FFAVTranscoder.hpp  FFAVTranscoderParameter.hpp  ffav.hpp
include/superess/: CVMat.hpp  DnnSuperRes.hpp  EDSRSuperess.hpp  ESPCNSuperess.hpp  FSRCNNSuperess.hpp  ffav.hpp
include/superess/impl/: CVMatImpl.hpp  DnnSuperResImpl.hpp  ffavimpl.hpp
include/type/: FFAVChannelLayout.hpp  FFAVCodecContext.hpp  FFAVCodecParameters.hpp  FFAVDecodeStream.hpp  FFAVDefine.hpp  FFAVEncodeStream.hpp  FFAVFormatContext.hpp  FFAVFrame.hpp  FFAVInputContext.hpp  FFAVOutputContext.hpp  FFAVPacket.hpp  FFAVPictureFormat.hpp  FFAVRational.hpp  FFAVStream.hpp  FFAVSwsContext.hpp  ffav.hpp
include/type/impl/: FFAVChannelLayoutImpl.hpp  FFAVCodecContextImpl.hpp  FFAVCodecParametersImpl.hpp  FFAVFilterContextImpl.hpp  FFAVFormatContextImpl.hpp  FFAVFrameImpl.hpp  FFAVPacketImpl.hpp  FFAVStreamImpl.hpp  FFAVSwsContextImpl.hpp  ffavimpl.hpp
include/util/: ffav.hpp  transMux.hpp
include/utils/: createDecodeContext.hpp  ffav.hpp  transMux.hpp  utils.hpp
src/: AVResult.cpp  AVType.cpp  AudioEncodeParameters.cpp  CMakeLists.txt  ChannelLayout.cpp  CodecContext.cpp  CodecParameters.cpp  Decoder.cpp  Demuxer.cpp  EncodeParameter.cpp  Encoder.cpp  FFMPEG.cpp  Frame.cpp  InputFormat.cpp  Muxer.cpp  Packet.cpp  Rational.cpp  Stream.cpp  VideoEncodeParameter.cpp  VideoEncodeParameters.cpp  test.cpp
src/codecs/: CMakeLists.txt  Decoder.cpp  FFAVAudioEncodeParameters.cpp  FFAVDecoder.cpp  FFAVEncoder.cpp  FFAVVideoEncodeParameters.cpp  createDecodeContext.cpp  createEncodeContext.cpp  create_decode_context.cpp  func.cpp
src/common/: CMakeLists.txt  FFAVDataType.cpp  FFAVPictureFormat.cpp  FFAVType.cpp
src/error/: AVError.cpp  CMakeLists.txt
src/ffmpeg/: AVResult.cpp  AVType.cpp  AVUtils.cpp  AudioEncodeParameters.cpp  AudioStreamInfo.cpp  CMakeLists.txt  ChannelLayout.cpp  CodecContext.cpp  CodecParameters.cpp  Decoder.cpp  Demuxer.cpp  Encoder.cpp  Frame.cpp  HWDecoderList.cpp  HWEncoderList.cpp  Muxer.cpp  Packet.cpp  Rational.cpp  Stream.cpp  VideoEncodeParameters.cpp  VideoStreamInfo.cpp
src/high_transcode/: CMakeLists.txt  FFAVTranscoder.cpp  FFAVTranscoderParameter.cpp
src/superess/: CMakeLists.txt  CVMat.cpp  DnnSuperRes.cpp  EDSRSuperess.cpp  ESPCNSuperess.cpp  FSRCNNSuperess.cpp
src/superess/impl/: CVMatImpl.cpp  DnnSuperResImpl.cpp
src/type/: CMakeLists.txt  FFAVChannelLayout.cpp  FFAVCodecContext.cpp  FFAVCodecParameters.cpp  FFAVDecodeStream.cpp  FFAVDefine.cpp  FFAVEncodeStream.cpp  FFAVFormatContext.cpp  FFAVFrame.cpp  FFAVInputContext.cpp  FFAVOutputContext.cpp  FFAVPacket.cpp  FFAVPictureFormat.cpp  FFAVRational.cpp  FFAVStream.cpp  FFAVSwsContext.cpp
src/type/impl/: FFAVChannelLayoutImpl.cpp  FFAVCodecContextImpl.cpp  FFAVCodecParametersImpl.cpp  FFAVFilterContextImpl.cpp  FFAVFormatContextImpl.cpp  FFAVFrameImpl.cpp  FFAVPacketImpl.cpp  FFAVStreamImpl.cpp  FFAVSwsContextImpl.cpp
src/util/: CMakeLists.txt  transMux.cpp
src/utils/: CMakeLists.txt  createDecodeContext.cpp  transMux.cpp  utils.cpp
test/: CMakeLists.txt  TEST.cpp  TEST_DEFINE.hpp  config.cpp  config.hpp  cuda_hw_decode.cpp  cuda_hw_encode.cpp  cuda_support.cpp  decode.cpp  decoder.cpp  high_transcode.cpp  hls_dash.cpp  main.cpp  play_pause_stop.cpp  resize.cpp  split_video.cpp  streaming.cpp  superess.cpp  test.cpp  test_test.cpp  transMux.cpp  transcode.cpp  transmux.cpp  transmuxing.cpp  type_test.cpp  video.cpp  video_format.cpp
